@@ -2,5 +2,6 @@
 
 set -x
 aclocal \
+&& autoheader \
 && automake --gnu --add-missing \
 && autoconf
