@@ -1,6 +1,7 @@
 AC_INIT(src/tsr_cli.c)
 AC_CONFIG_AUX_DIR(config)
-AM_INIT_AUTOMAKE(tsrip, 0.0.1)
+AM_INIT_AUTOMAKE(tsrip, 0.0.2)
+AC_CONFIG_HEADERS(config.h)
 
 AC_PROG_CC
 ##AC_LANG(C)
